--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -1,5 +1,8 @@
 <RCC>
 	<qresource prefix="/">
 		<file>ui/stylesheet.qss</file>
+		<file>shaders/model.vs</file>
+		<file>shaders/model.ps</file>
+	loadShaderResource()
 	</qresource>
 </RCC>
