--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -4,6 +4,7 @@
 		<file>shaders/model.vs</file>
 		<file>shaders/model.ps</file>
 		<file>models/suzanne.usdc</file>
+		<file>models/teapot.usdc</file>
 		<file>models/arch.usdc</file>
 	</qresource>
 </RCC>
