--- a/resources/ui/mainwindow.ui
+++ b/resources/ui/mainwindow.ui
@@ -93,7 +93,14 @@
     <addaction name="actionImportModel"/>
     <addaction name="actionExportCollision"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionFrameAll"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionImportModel">
@@ -107,6 +114,11 @@
   <action name="actionExportCollision">
    <property name="text">
     <string>Export Collision</string>
+   </property>
+  </action>
+  <action name="actionFrameAll">
+   <property name="text">
+    <string>Frame All</string>
    </property>
   </action>
  </widget>
