--- a/resources/ui/stylesheet.qss
+++ b/resources/ui/stylesheet.qss
@@ -51,7 +51,7 @@ QSpinBox::down-arrow, QDoubleSpinBox::down-arrow
 
 QSpinBox::up-arrow, QDoubleSpinBox::up-arrow
 {
-    image               : url(:icons/chevron-up.png);
+    image               : url(:/icons/chevron-up.png);
     width               : 10;
     height              : 10;
 }
