--- a/resources/ui/stylesheet.qss
+++ b/resources/ui/stylesheet.qss
@@ -8,6 +8,12 @@ QFrame
 	background-color	: rgb(33, 33, 33);
 }
 
+QCheckBox
+{
+    background-color    : rgb(24, 24, 24);
+    color               : rgb(192, 192, 192);
+}
+
 LogWidget
 {
 	background-color	: rgb(100,0,0);
@@ -23,6 +29,9 @@ LogWidget QListWidget
 
 ExpanderWidget QToolButton
 {
+    background-color    : rgb(66, 66, 66);
+    color               : rgb(200, 200, 200);
+    border              : 1px solid rgb(88, 88, 88);
     font-size           : 12px;
     font-weight         : bold;
 }
