--- a/resources/ui/stylesheet.qss
+++ b/resources/ui/stylesheet.qss
@@ -14,6 +14,44 @@ QCheckBox
     color               : rgb(192, 192, 192);
 }
 
+QScrollBar:vertical, QScrollBar:horizontal
+{
+    border              : 1px solid rgb(36, 36, 36);
+    background-color    : rgb(24, 24, 24);
+    border-radius       : 2px;
+}
+
+QScrollBar::handle:horizontal
+{
+    border              : 1px solid rgb(50, 50, 50);
+    background-color    : rgb(66, 66, 66);
+    margin-left         : 12px;
+    margin-right        : 12px;
+    border-radius       : 2px;
+    min-width           : 32px;
+}
+
+QScrollBar::handle:vertical
+{
+    border              : 1px solid rgb(50, 50, 50);
+    background-color    : rgb(66, 66, 66);
+    margin-top          : 12px;
+    margin-bottom       : 12px;
+    border-radius       : 2px;
+    min-height          : 32px;
+}
+
+QScrollBar::left-arrow:horizontal, QScrollBar::right-arrow:horizontal,
+QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
+{
+    background-color    : rgb(66, 66, 66);
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
+{
+    background-color    : none;
+}
+
 LogWidget
 {
 	background-color	: rgb(100,0,0);
