--- a/resources/ui/stylesheet.qss
+++ b/resources/ui/stylesheet.qss
@@ -44,10 +44,14 @@ QScrollBar::handle:vertical
 QScrollBar::left-arrow:horizontal, QScrollBar::right-arrow:horizontal,
 QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
 {
+    border              : 1px solid rgb(50, 50, 50);
     background-color    : rgb(66, 66, 66);
+    border-radius       : 2px;
 }
 
-QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal,
+QScrollBar::add-line:horizontal, QScrollBar::sub-line:horizontal,
+QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical
 {
     background-color    : none;
 }
